# sonication

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test_tts.pcm
.opencode/plans/: voice_workflow_sdk_refactoring.md
backend/: __init__.py  analysis.py  app.py  call.py  cli.py  client_new_connection.py  clients.py  config.py  db.py  edge.py  events.py  monitor.py  pipeline.py  probe_stt.py  schemas.py
data/: calls.db-shm  calls.db-wal
documents/: event_stream_and_logging.md  main_pipeline_classes.md  node_types.md
examples/: basic_example.py  pizza_agent.py  pizza_agent_test.py  test_event_timing.py  test_warmth_pipe.py
examples/frontend/: app.js  index.html
frontend/: analysis.html  app.js  index.html
scripts/: create_audio.py  read_audio.py
sonication/: __init__.py  analysis.py  app.py  call.py  client.py  clients.py  config.py  db.py  events.py  hotpipe.py  log_manager.py  models.py  node_types.py  nodes.py  pipeline.py  scheduler.py  schema.py
