[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sonication"
version = "0.2.0"
description = "Pipeline-first voice agent SDK — STT, LLM, TTS nodes with typed observability"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "wsproto>=1.2",
    "truststore>=0.9",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]

[project.urls]
Repository = "https://github.com/sonication/sonication"

[tool.hatch.build.targets.wheel]
packages = ["sonication"]